fixed blog posts not showing up correctly

--- a/static/styles.css
+++ b/static/styles.css
@@ -84,7 +84,7 @@ h1  {
 
 .bump {
     padding-left: 5%;
-    padding-right 5%;
+    padding-right: 5%;
 }
 
 .white {
@@ -119,5 +119,3 @@ h1  {
 .text-left {
     text-align: left;
 }
-
-.blog-post
